--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "@nestjs/websockets": "^11.0.11",
     "cache-manager-redis-store": "^3.0.1",
     "class-validator": "^0.14.1",
+    "helmet": "^8.1.0",
     "ioredis": "^5.6.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
